fix letter spacing

--- a/src/index.css
+++ b/src/index.css
@@ -210,7 +210,7 @@ button:hover {
   font-size: 2.5rem;
   margin-bottom: 2rem;
   font-weight: 800;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.11em;
   color: rgba(255,255,255,0.6);
   text-align: center;
 }
@@ -277,7 +277,7 @@ button:hover {
   margin-top: 1rem;
   margin-bottom: 3rem;
   font-weight: 800;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.1em;
   color: rgba(255,255,255,0.6);
   text-align: center;
 }
@@ -318,7 +318,7 @@ button:hover {
   font-size: 2.5rem;
   margin-bottom: 4rem;
   font-weight: 800;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.1em;
   color: rgba(255,255,255,0.6);
   text-align: center;
 }
@@ -398,7 +398,7 @@ button:hover {
 
 .contact h2 {
   font-size: 2.5rem;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.1em;
   font-weight: 800;
   margin-top: 1rem;              /* same spacing as Socials, Gallery */
   margin-bottom: 3rem;           /* plenty of room before form */
